--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i> <span class="light">Start</span> Bootstrap
+                    <img src="img/mountains.png">
                 </a>
             </div>
 
