--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     Menu <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <img src="img/mountains.png">
+                    <img src="img/mountains.png" height="75" width="200">
                 </a>
             </div>
 
