--- a/index.html
+++ b/index.html
@@ -95,10 +95,22 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>Our Story</h2>
+                <h3>Athens Proposal</h3>
+                <p>In September 2017 on a family trip to Greece, Brandon proposed on our rooftop garden overlooking Acropolis in front of family.</p>
+                <h3>How We Met</h3>
+                <p>We met via match.com in October of 2014. On our first date, we realized our paths had crossed before: When we were teenagers, Brandon managed the Quizno's directly across the street from my neighborhood, and I remembered seeing him there on the weekends, reading the newspaper. We grew up very near each other, and, to add to the coincidences, we still did: Brandon lived in a condo just one street over from my apartment.</p>
+                <h3>Travels</h3>
+                <p>When I met Brandon, he told me his personal goal was to travel internationally at least once per year. He was looking for a partner to share in these adventures with. I was more than willing!</p>
+
+                <p>In March 2015 we had our first adventure together to New York, NY. Following New York was a trip to Antigua for Brandon's father's wedding, then Kansas City, MO for a 90's concert, and capped the year off with a Thanksgiving trip to San Francisco.</p>
+
+                <p>In 2016, We explored Washington, D.C. (still one of our favorite trips), Berlin, Amsterdam, London & Paris. I still think the best part of that year was Billy the greyhound joining the family in March, though.</p>
+
+                <p>2017 has been one of our favorite years as far as adventures go. Travelling to Montana to visit Yellowstone National Park, a weekend getaway to Louisville, KY and a trip to Maui with Brandon's Dad, Step-mom, and Aunt Heather. In September, we took a family trip to Greece where Brandon popped the question.</p>
+
+                <p>We already have big plans for 2018. Arizona to see the Grand Canyon and Antelope Canyons with best friends, Banff National Park in Alberta, and a Thanksgiving trip to Rome with our parents!</p>
+
             </div>
         </div>
     </section>
