--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Our Story</h2>
+                <font color="black"><h2>Our Story</h2>
                 <h3>Athens Proposal</h3>
                 <p>In September 2017 on a family trip to Greece, Brandon proposed on our rooftop garden overlooking Acropolis in front of family.</p>
                 <h3>How We Met</h3>
@@ -110,7 +110,7 @@
                 <p>2017 has been one of our favorite years as far as adventures go. Travelling to Montana to visit Yellowstone National Park, a weekend getaway to Louisville, KY and a trip to Maui with Brandon's Dad, Step-mom, and Aunt Heather. In September, we took a family trip to Greece where Brandon popped the question.</p>
 
                 <p>We already have big plans for 2018. Arizona to see the Grand Canyon and Antelope Canyons with best friends, Banff National Park in Alberta, and a Thanksgiving trip to Rome with our parents!</p>
-
+                                   </font>
             </div>
         </div>
     </section>
