--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
+                <img src="img/mountaingoat.png" width="175" height="140">                                 
                 <font color="black"><h2>Our Story</h2>
                 <h3>Athens Proposal</h3>
                 <p>In September 2017 on a family trip to Greece, Brandon proposed on our rooftop garden overlooking Acropolis in front of family.</p>
