--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         </div>
     </header>
 
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
+    <!-- Our Story Section -->
+    <section id="ourstory" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <img src="img/mountaingoat.png" width="175" height="140">    
