--- a/index.html
+++ b/index.html
@@ -118,13 +118,19 @@
     </section>
 
     <!-- Download Section -->
-    <section id="download" class="content-section text-center">
+    <section id="weddingdetails" class="content-section text-center">
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Wedding Details</h2>
+                    <h3>Date and Time</h3>
+                    <p>Friday, August 30, 2019. 
+                    <br>5:30 PM Mountain Time</p>   
+                    <h3>Ceremony and Reception</h3>
+                    <p>Whitefish Mountain Resort
+                    <br>1015 Glades Dr, Whitefish, MT 59937, USA</p>
+                    <p>Ceremony and Reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided under "accommodations" tab.</p>
+                    <p>Guests arrive by chairlift or enclosed gondola to the ceremony at the summit. Reception to follow at Base Lodge.</p>
                 </div>
             </div>
         </div>
