--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <h2 class="brand-heading">Allison & Brandon</h2>
                         <p class="intro-text">August 30th, 2019
                             <br>Whitefish Mountain Resort</p>
-                        <a href="#about" class="btn btn-circle page-scroll">
+                        <a href="#ourstory" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
