--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                     <li>
                         <a class="page-scroll" href="#weddingdetails">Wedding Details</a>
                     </li>
+                                                                      <li>
+                        <a class="page-scroll" href="#destinationwedding">Why a Destination Wedding</a>
+                    </li>
                     <li>
                         <a class="page-scroll" href="#photos">Photos</a>
                     </li>
@@ -117,7 +120,7 @@
         </div>
     </section>
 
-    <!-- Download Section -->
+    <!-- Wedding Details Section -->
     <section id="weddingdetails" class="content-section text-center">
         <div class="download-section">
             <div class="container">
@@ -135,6 +138,35 @@
             </div>
         </div>
     </section>
+
+<!-- Why a Destination Wedding -->
+    <section id="destination" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">                                      
+                <font color="black"><h2>Our Story</h2>
+                <h3>Why We Chose a Destination Wedding</h3>
+                                   <h4>For the Love of Travel</h4>
+<p><i>"Whitefish is a resort town in the Rocky Mountains of northwest Montana. It’s a gateway to the jagged peaks, lakes and glacier-carved valleys of Glacier National Park. Home to bighorn sheep, mountain goats, grizzly bears, golden eagles, Canadian lynx, wolverines, and many other beasts and birds, Glacier National Park is 16,000 square miles of mountains, meadows and lakes on the Continental Divide, a breathtaking landscape so remote it is sometimes lonely even in our crowded age."</i></p>
+
+<p>Ever since Brandon and I traveled to Montana in May 2017, we knew we wanted to see more mountains and wildlife. We visited a lot of different cities in our travels together, but nothing compared to the excitement of experiencing bears, bighorn sheep, coyote, and other wild animals in their natural habitat when visiting Yellowstone National Park. Not to mention the gorgeous backdrop. Glacier National Park was added to our bucket list shortly after that trip.</p>
+
+<p>When planning our wedding, we wanted it to be something that is representative of us and who we are as a couple. We love to travel and experience new places. We couldn't envision getting married in St. Louis when our best times together have been packing up and getting lost in new worlds. We would love to share this intimate experience with our closest family and friends.  We are so very appreciative of anyone who can make the journey to spend our wedding day with us.</p>
+
+<h4>To Have an Intimate Wedding</h4>
+<p>We want to be surrounded by those who truly know us. Having a destination wedding allows us to spend more quality time with each of our guests and have a more intimate experience.</p>
+
+<h4>To Have More Than Just a Wedding</h4>
+<p>We view this as a time for our family and friends to come together and have an unforgettable experience. Not just a wedding, but a chance to get to know each other and have a great time, for more than just one night. With a destination wedding, we have the ability to plan multiple events surrounding the wedding. We look forward to a fun-filled weekend in the mountains with our friends and families.</p>
+
+<h4>To Have a Good Time</h4>
+<p>Photographing multiple weddings together has given us a unique behind-the-scenes perspective of weddings. Between the stress of  coordinating vendors, guests, and bridal parties - it seemed easy to lose sight of the reason for the wedding.</p>
+
+<p>We want our wedding to be enjoyable to our guests and to us. Leaving the planning to the resort allows us to focus on why we're there: to make a lifelong commitment to one another and celebrate this time in our lives.</p>
+                                   </font>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="container content-section text-center">
