--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Theme CSS -->
     <link href="css/grayscale.min.css" rel="stylesheet">
-    <link href="css/custom.css" rel="stylesheet">  
+    <link href="css/custom.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -98,8 +98,8 @@
     <section id="ourstory" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <img src="img/mountaingoat.png" width="140" height="112">    
-                <br>                                                        
+                <img src="img/mountaingoat.png" width="140" height="112">
+                <br>
                 <font color="black"><h2>Our Story</h2>
                 <h3>Athens Proposal</h3>
                 <p>In September 2017 on a family trip to Greece, Brandon proposed on our rooftop garden overlooking Acropolis in front of family.</p>
@@ -127,8 +127,8 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Wedding Details</h2>
                     <h3>Date and Time</h3>
-                    <p>Friday, August 30, 2019. 
-                    <br>5:30 PM Mountain Time</p>   
+                    <p>Friday, August 30, 2019.
+                    <br>5:30 PM Mountain Time</p>
                     <h3>Ceremony and Reception</h3>
                     <p>Whitefish Mountain Resort
                     <br>1015 Glades Dr, Whitefish, MT 59937, USA</p>
@@ -142,7 +142,7 @@
 <!-- Why a Destination Wedding -->
     <section id="destination" class="container content-section text-center">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">                                      
+            <div class="col-lg-8 col-lg-offset-2">
                 <font color="black"><h2>Our Story</h2>
                 <h3>Why We Chose a Destination Wedding</h3>
                                    <h4>For the Love of Travel</h4>
@@ -168,28 +168,63 @@
     </section>
 
 
-    <!-- Contact Section -->
-    <section id="contact" class="container content-section text-center">
+    <!-- Accomodations Section -->
+<section id="accomodations" class="content-section text-center">
+    <div class="accomodations-section">
+    <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
-                </p>
-                <ul class="list-inline banner-social-buttons">
-                    <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
-                    </li>
-                    <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
-                    </li>
-                </ul>
+            <div class="col-sm">
+            <h2>Accomodations</h2>
+            </div></div>
+            <div class="row">
+            <div class="col-sm">
+                <h3>Whitefish Moutanin Resort</h3>
+                <h3>Date and Time</h3>
+                <p>Friday, August 30, 2019.
+                <br>5:30 PM Mountain Time</p>
+                <h3>Ceremony and Reception</h3>
+                <p>Whitefish Mountain Resort
+                <br>1015 Glades Dr, Whitefish, MT 59937, USA</p>
+                <p>Ceremony and Reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided under "accommodations" tab.</p>
+                <p>Guests arrive by chairlift or enclosed gondola to the ceremony at the summit. Reception to follow at Base Lodge.</p>
+            </div>
+            <div class="col-sm">
+            <h3>Other Lodging Options</h3>
+            <h3>Date and Time</h3>
+            <p>Friday, August 30, 2019.
+            <br>5:30 PM Mountain Time</p>
+            <h3>Ceremony and Reception</h3>
+            <p>Whitefish Mountain Resort
+            <br>1015 Glades Dr, Whitefish, MT 59937, USA</p>
+            <p>Ceremony and Reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided under "accommodations" tab.</p>
+            <p>Guests arrive by chairlift or enclosed gondola to the ceremony at the summit. Reception to follow at Base Lodge.</p>
+            </div>
+            <div class="col-sm">
+            <h3>Travel and Transportation</h3>
+            <h3>Date and Time</h3>
+            <p>Friday, August 30, 2019.
+            <br>5:30 PM Mountain Time</p>
+            <h3>Ceremony and Reception</h3>
+            <p>Whitefish Mountain Resort
+            <br>1015 Glades Dr, Whitefish, MT 59937, USA</p>
+            <p>Ceremony and Reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided under "accommodations" tab.</p>
+            <p>Guests arrive by chairlift or enclosed gondola to the ceremony at the summit. Reception to follow at Base Lodge.</p>
+            </div>
+            <div class="col-sm">
+            <h3>Things To Do</h3>
+            <h3>Date and Time</h3>
+            <p>Friday, August 30, 2019.
+            <br>5:30 PM Mountain Time</p>
+            <h3>Ceremony and Reception</h3>
+            <p>Whitefish Mountain Resort
+            <br>1015 Glades Dr, Whitefish, MT 59937, USA</p>
+            <p>Ceremony and Reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided under "accommodations" tab.</p>
+            <p>Guests arrive by chairlift or enclosed gondola to the ceremony at the summit. Reception to follow at Base Lodge.</p>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 
     <!-- Map Section -->
     <div id="map"></div>
