--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
     <!-- Accomodations Section -->
 <section id="accomodations" class="content-section text-center">
     <div class="accomodations-section">
+      <font color="black">
     <div class="container">
         <div class="row">
             <div class="col-sm">
@@ -221,6 +222,7 @@
             <p>Ceremony and Reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided under "accommodations" tab.</p>
             <p>Guests arrive by chairlift or enclosed gondola to the ceremony at the summit. Reception to follow at Base Lodge.</p>
             </div>
+          </font>
         </div>
     </div>
 </section>
