--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <!-- Accomodations Section -->
 <section id="accomodations" class="content-section text-center">
-    <div class="accomodations-section">
+    <div class="downloads-section">
       <font color="black">
     <div class="container">
         <div class="row">
