--- a/index.html
+++ b/index.html
@@ -171,59 +171,19 @@
     <!-- Accomodations Section -->
 <section id="accomodations" class="content-section text-center">
     <div class="download-section">
-      <font color="black">
     <div class="container">
         <div class="row">
             <div class="col-sm">
             <h2>Accomodations</h2>
             </div></div>
             <div class="row">
-            <div class="col-sm">
-                <h3>Whitefish Moutanin Resort</h3>
-                <h3>Date and Time</h3>
-                <p>Friday, August 30, 2019.
-                <br>5:30 PM Mountain Time</p>
-                <h3>Ceremony and Reception</h3>
-                <p>Whitefish Mountain Resort
-                <br>1015 Glades Dr, Whitefish, MT 59937, USA</p>
-                <p>Ceremony and Reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided under "accommodations" tab.</p>
-                <p>Guests arrive by chairlift or enclosed gondola to the ceremony at the summit. Reception to follow at Base Lodge.</p>
-            </div>
-            <div class="col-sm">
-            <h3>Other Lodging Options</h3>
-            <h3>Date and Time</h3>
-            <p>Friday, August 30, 2019.
-            <br>5:30 PM Mountain Time</p>
-            <h3>Ceremony and Reception</h3>
-            <p>Whitefish Mountain Resort
-            <br>1015 Glades Dr, Whitefish, MT 59937, USA</p>
-            <p>Ceremony and Reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided under "accommodations" tab.</p>
-            <p>Guests arrive by chairlift or enclosed gondola to the ceremony at the summit. Reception to follow at Base Lodge.</p>
-            </div>
-            <div class="col-sm">
-            <h3>Travel and Transportation</h3>
-            <h3>Date and Time</h3>
-            <p>Friday, August 30, 2019.
-            <br>5:30 PM Mountain Time</p>
-            <h3>Ceremony and Reception</h3>
-            <p>Whitefish Mountain Resort
-            <br>1015 Glades Dr, Whitefish, MT 59937, USA</p>
-            <p>Ceremony and Reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided under "accommodations" tab.</p>
-            <p>Guests arrive by chairlift or enclosed gondola to the ceremony at the summit. Reception to follow at Base Lodge.</p>
-            </div>
-            <div class="col-sm">
-            <h3>Things To Do</h3>
-            <h3>Date and Time</h3>
-            <p>Friday, August 30, 2019.
-            <br>5:30 PM Mountain Time</p>
-            <h3>Ceremony and Reception</h3>
-            <p>Whitefish Mountain Resort
-            <br>1015 Glades Dr, Whitefish, MT 59937, USA</p>
-            <p>Ceremony and Reception will both take place at Whitefish Mountain Resort, where a room block and 15% off promo code have been provided under "accommodations" tab.</p>
-            <p>Guests arrive by chairlift or enclosed gondola to the ceremony at the summit. Reception to follow at Base Lodge.</p>
-            </div>
-          </font>
-        </div>
+    <div class="col-sm">col-sm</div>
+    Test
+    <div class="col-sm">col-sm</div>
+    Test2
+    <div class="col-sm">col-sm</div>
+    Test3
+  </div>
     </div>
 </section>
 
