--- a/index.html
+++ b/index.html
@@ -172,18 +172,18 @@
 <section id="accomodations" class="content-section text-center">
     <div class="download-section">
     <div class="container">
-        <div class="row">
-            <div class="col-sm">
-            <h2>Accomodations</h2>
-            </div></div>
-            <div class="row">
-    <div class="col-sm">col-sm</div>
-    Test
-    <div class="col-sm">col-sm</div>
-    Test2
-    <div class="col-sm">col-sm</div>
-    Test3
+  <div class="row">
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
+    <div class="col-sm">
+      One of three columns
+    </div>
   </div>
+</div>
     </div>
 </section>
 
