--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 
     <!-- Accomodations Section -->
-    <div class="container">
+    <font color="black"><div class="container">
       <div class="row">
         <div class="col-sm">
           One of three columns
@@ -182,6 +182,7 @@
         </div>
       </div>
     </div>
+    </font>
 </section>
 
 
