--- a/index.html
+++ b/index.html
@@ -169,20 +169,22 @@
 
 
     <!-- Accomodations Section -->
-    <font color="black"><div class="container">
-      <div class="row">
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-        <div class="col-sm">
-          One of three columns
-        </div>
-      </div>
+<section id="accomodations" class="content-section text-center">
+    <div class="download-section">
+    <div class="container">
+  <div class="row">
+    <div class="col">
+      One of three columns
     </div>
-    </font>
+    <div class="col">
+      One of three columns
+    </div>
+    <div class="col">
+      One of three columns
+    </div>
+  </div>
+</div>
+    </div>
 </section>
 
 
