--- a/index.html
+++ b/index.html
@@ -182,6 +182,17 @@
     <div class="col">
       One of three columns
     </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        One of three columns
+      </div>
+      <div class="col">
+        One of three columns
+      </div>
+      <div class="col">
+        One of three columns
+      </div>
   </div>
 </div>
     </div>
