--- a/index.html
+++ b/index.html
@@ -170,32 +170,45 @@
 
     <!-- Accomodations Section -->
 <section id="accomodations" class="content-section text-center">
-    <div class="download-section">
-    <div class="container">
-  <div class="row">
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
-    </div>
-    <div class="col">
-      One of three columns
-    </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        One of three columns
-      </div>
-      <div class="col">
-        One of three columns
-      </div>
-      <div class="col">
-        One of three columns
-      </div>
-  </div>
+<div class="container">
+<div class="row">
+<div class="col-md-3">
+    <h1>hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
+        so i have another 9 columns more i can create and after that i will have to declare another 
+        "row " class , though I can declare the new row class in the same container 
+    </h1>
+</div>  
+
+<div class="col-md-3">
+    <h1>hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
+        so i have another 6 coloums more i can create and after that i will have to declare another 
+        "row " class , though i can declare the new row class in the same container 
+    </h1>
+</div>  
+
+<div class="col-md-3">
+    <h1>hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
+        so i have another 3 coloums more i can create and after that i will have to declare another 
+        "row " class , though i can declare the new row class in the same container 
+    </h1>
+</div>  
+
+<div class="col-md-3">
+    <h1>hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
+        so i have another 0 coloums more i can create and after that i will have to declare another 
+        "row " class , though i can declare the new row class in the same container 
+    </h1>
+</div>  
+
+<!-- now that we have used up all the 12 coloumbs in this row , lets go create a new "row class" , Alas in the same container -->
+</div>  <!-- end of row -->
+
+<div class="row">
+<div class="col-md-12">
+    <h1>I am a col , that spans the entire 12 coloumbs that this row had to offer , by now you should know that if you want to create another coloumb , you have to go create another "row" class</h1>
 </div>
-    </div>
+</div>
+</div>
 </section>
 
 
