--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <!-- Accomodations Section -->
 <section id="accomodations" class="content-section text-center">
-<div class="container">
+<font color="black"><div class="container">
 <div class="row">
 <div class="col-md-3">
     <h1>hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
@@ -208,7 +208,7 @@
     <h1>I am a col , that spans the entire 12 coloumbs that this row had to offer , by now you should know that if you want to create another coloumb , you have to go create another "row" class</h1>
 </div>
 </div>
-</div>
+</div></font>
 </section>
 
 
