--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     <!-- Accomodations Section -->
 <section id="accomodations" class="content-section text-center">
 <font color="black"><div class="container">
-<div class="row">
+<div class="row download-section">
 <div class="col-md-3">
     hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
         so i have another 9 columns more i can create and after that i will have to declare another 
