--- a/index.html
+++ b/index.html
@@ -169,9 +169,9 @@
 
 
     <!-- Accomodations Section -->
-<section id="accomodations" class="content-section text-center">
+<section id="accomodations" class="content-section text-center download-section">
 <font color="black"><div class="container">
-<div class="row download-section">
+<div class="row">
 <div class="col-md-3">
     hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
         so i have another 9 columns more i can create and after that i will have to declare another 
