--- a/index.html
+++ b/index.html
@@ -170,9 +170,15 @@
 
     <!-- Accomodations Section -->
 <section id="accomodations" class="content-section text-center download-section">
-<font color="black"><div class="container">
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+    <h1>Accomodations</h1>
+</div>
+</div>
 <div class="row">
 <div class="col-md-3">
+<h3>Whitefish Mountain Resort</h3>
     hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
         so i have another 9 columns more i can create and after that i will have to declare another 
         "row " class , though I can declare the new row class in the same container 
@@ -180,6 +186,7 @@
 </div>  
 
 <div class="col-md-3">
+<h3>Other Lodging Options</h3>
     hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
         so i have another 6 coloums more i can create and after that i will have to declare another 
         "row " class , though i can declare the new row class in the same container 
@@ -187,6 +194,7 @@
 </div>  
 
 <div class="col-md-3">
+<h3>Travel and Transportation</h3>
     hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
         so i have another 3 coloums more i can create and after that i will have to declare another 
         "row " class , though i can declare the new row class in the same container 
@@ -194,6 +202,7 @@
 </div>  
 
 <div class="col-md-3">
+<h3>Things to Do</h3>
     hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
         so i have another 0 coloums more i can create and after that i will have to declare another 
         "row " class , though i can declare the new row class in the same container 
@@ -202,13 +211,7 @@
 
 <!-- now that we have used up all the 12 coloumbs in this row , lets go create a new "row class" , Alas in the same container -->
 </div>  <!-- end of row -->
-
-<div class="row">
-<div class="col-md-12">
-    <h1>I am a col , that spans the entire 12 coloumbs that this row had to offer , by now you should know that if you want to create another coloumb , you have to go create another "row" class</h1>
 </div>
-</div>
-</div></font>
 </section>
 
 
