--- a/index.html
+++ b/index.html
@@ -179,10 +179,18 @@
 <div class="row">
 <div class="col-md-3">
 <h3>Whitefish Mountain Resort</h3>
-    hey hey i span 3 coloumbs and bootstrap allows a maximum of 12 
-        so i have another 9 columns more i can create and after that i will have to declare another 
-        "row " class , though I can declare the new row class in the same container 
-    
+<p>Address: 1015 Glades Dr, Whitefish, MT 59937, USA
+<br>Phone: 800-858-4152
+<br>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. 
+
+<p>Call 1-800-858-4152.  Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
+</p>
+<p>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
+<br><br>
+Morning Eagle Lodge offers studio, 1-, 2- and 3-bedroom condos available. Each condo is equipped with a kitchen, granite countertops, upscale living spaces, one bathroom for every bedroom and private balconies. Amenities include gas fireplaces in 1-, 2- and 3-bedroom units, underground parking, mountain and valley views, an elevator, fitness facility, free WiFi access, rooftop hot tub and a shared gas grill. 
+<br><br>
+Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a queen bed. Condos feature spacious upscale living rooms, a kitchen, one bathroom for every bedroom and private decks. Amenities include gas fireplaces in 1-, 2- and 3-bedroom condos, underground parking, elevators, free WiFi access, a shared slopeside hot tub and mountain and valley views. 
+</p>    
 </div>  
 
 <div class="col-md-3">
