--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     <h1>Accomodations</h1>
 </div>
 </div>
-<div class="row">
+<div class="row small-text">
 <div class="col-md-3">
 <h3>Whitefish Mountain Resort</h3>
 <p>Address: 1015 Glades Dr, Whitefish, MT 59937, USA
