--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
     <h1>Accomodations</h1>
 </div>
 </div>
-<div class="row small-text">
-<div class="col-md-3">
+<div class="row">
+<div class="col-md-3 small-text">
 <h3>Whitefish Mountain Resort</h3>
 <p>Address: 1015 Glades Dr, Whitefish, MT 59937, USA
 <br>Phone: 800-858-4152
