--- a/index.html
+++ b/index.html
@@ -177,8 +177,9 @@
 </div>
 </div>
 <div class="row">
-<div class="col-md-3 small-text">
+<div class="col-md-3">
 <h3>Whitefish Mountain Resort</h3>
+<font class="small text">
 <p>Address: 1015 Glades Dr, Whitefish, MT 59937, USA
 <br>Phone: 800-858-4152
 <br>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. 
@@ -190,7 +191,8 @@
 Morning Eagle Lodge offers studio, 1-, 2- and 3-bedroom condos available. Each condo is equipped with a kitchen, granite countertops, upscale living spaces, one bathroom for every bedroom and private balconies. Amenities include gas fireplaces in 1-, 2- and 3-bedroom units, underground parking, mountain and valley views, an elevator, fitness facility, free WiFi access, rooftop hot tub and a shared gas grill. 
 <br><br>
 Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a queen bed. Condos feature spacious upscale living rooms, a kitchen, one bathroom for every bedroom and private decks. Amenities include gas fireplaces in 1-, 2- and 3-bedroom condos, underground parking, elevators, free WiFi access, a shared slopeside hot tub and mountain and valley views. 
-</p>    
+</p> 
+</font>   
 </div>  
 
 <div class="col-md-3">
