--- a/index.html
+++ b/index.html
@@ -179,12 +179,11 @@
 <div class="row">
 <div class="col-md-3">
 <h3>Whitefish Mountain Resort</h3>
-<font class="small text">
-<p>Address: 1015 Glades Dr, Whitefish, MT 59937, USA
+<p-small>Address: 1015 Glades Dr, Whitefish, MT 59937, USA
 <br>Phone: 800-858-4152
 <br>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. 
 
-<p>Call 1-800-858-4152.  Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
+<p-small>Call 1-800-858-4152.  Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
 </p>
 <p>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
 <br><br>
