--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
 
     <!-- Accomodations Section -->
-<section id="accomodations" class="content-section text-center download-section">
+<section id="accomodations" class="content-section download-section">
 <div class="container">
 <div class="row">
 <div class="col-md-12">
