--- a/index.html
+++ b/index.html
@@ -172,31 +172,50 @@
 <section id="accomodations" class="content-section download-section">
 <div class="container">
 <div class="row">
-<div class="col-md-12">
+<div class="col-md-12 text-center">
     <h1>Accomodations</h1>
 </div>
 </div>
 <div class="row">
 <div class="col-md-3">
 <h3>Whitefish Mountain Resort</h3>
-<p-small>Address: 1015 Glades Dr, Whitefish, MT 59937, USA
-<br>Phone: 800-858-4152
+<p-small><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA
+<br><b>Phone: 800-858-4152</b>
 <br>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. 
 
 <p-small>Call 1-800-858-4152.  Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
-</p>
+</p-small>
 <p-small>Please book your accommodations in the main village area, which includes the Morning Eagle Lodge and the Kintla Lodge.
 <br><br>
 Morning Eagle Lodge offers studio, 1-, 2- and 3-bedroom condos available. Each condo is equipped with a kitchen, granite countertops, upscale living spaces, one bathroom for every bedroom and private balconies. Amenities include gas fireplaces in 1-, 2- and 3-bedroom units, underground parking, mountain and valley views, an elevator, fitness facility, free WiFi access, rooftop hot tub and a shared gas grill. 
 <br><br>
 Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a queen bed. Condos feature spacious upscale living rooms, a kitchen, one bathroom for every bedroom and private decks. Amenities include gas fireplaces in 1-, 2- and 3-bedroom condos, underground parking, elevators, free WiFi access, a shared slopeside hot tub and mountain and valley views. 
-</p> 
+</p-small>
 </font>   
 </div>  
 
 <div class="col-md-3">
 <h3>Other Lodging Options</h3>
-    hey hey
+<p-small><b>Best Western Rocky Mountain Lodge</b>
+Address: 6510 Highway 93 S, Whitefish, MT 59937
+Phone: (406) 862-2569
+Straightforward property with free WiFi, breakfast & an area shuttle, plus an outdoor pool.</p-small>
+
+<p-small><b>Hampton Inn & Suites Whitefish</b>
+Address: 6340 US-93, Whitefish, MT 59937
+Phone: (406) 730-8901
+Relaxed hotel featuring complimentary breakfast, plus a fitness room & indoor pool.</p-small>
+
+<p-small><b>Pine Lodge</b>
+Address: 920 Spokane Ave, Whitefish, MT 59937
+Phone: (406) 862-760
+Rustic-accented rooms & suites, plus indoor & outdoor pools, free breakfast & shuttle service</p-small>
+
+<p-small><b>AirBnB</b>
+https://www.airbnb.com/</p-small>
+
+
+*Please note, you may need a rental car for ceremony and reception by choosing other accommodations.
     
 </div>  
 
