--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <div class="col-sm-4">
 <h3>Whitefish Mountain Resort</h3>
 <p-small><b>Address:</b> 1015 Glades Dr, Whitefish, MT 59937, USA
-<br><b>Phone: 800-858-4152</b>
+<br><b>Phone:</b> 800-858-4152
 <br>Resort accommodations are available in all sizes and types from luxurious townhomes and private residences to cozy cabins and condominiums. 
 
 <p-small>Call 1-800-858-4152.  Any of the Vacation Planners can assist you, whether you’ve decided on a specific property or building, or would like for them to discuss some options with you.  Mention your promo code, which is BrandonWexler to receive 15% off OR you may also book on-line by visiting skiwhitefish.com, and entering this same promo code.  The promo code cannot be used online until August 30th, 2018.
@@ -200,29 +200,47 @@ Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a que
 Address: 6510 Highway 93 S, Whitefish, MT 59937
 Phone: (406) 862-2569
 Straightforward property with free WiFi, breakfast & an area shuttle, plus an outdoor pool.</p-small>
-
+<br><br>
 <p-small><b>Hampton Inn & Suites Whitefish</b>
 Address: 6340 US-93, Whitefish, MT 59937
 Phone: (406) 730-8901
 Relaxed hotel featuring complimentary breakfast, plus a fitness room & indoor pool.</p-small>
-
+<br><br>
 <p-small><b>Pine Lodge</b>
 Address: 920 Spokane Ave, Whitefish, MT 59937
 Phone: (406) 862-760
 Rustic-accented rooms & suites, plus indoor & outdoor pools, free breakfast & shuttle service</p-small>
-
+<br><br>
 <p-small><b>AirBnB</b>
 https://www.airbnb.com/</p-small>
-
-
+<br><br>
 *Please note, you may need a rental car for ceremony and reception by choosing other accommodations.
-    
 </div>  
 
 <div class="col-sm-4">
 <h3>Travel and Transportation</h3>
-    hey hey 
-    
+<h5>Area Shuttle Service</h5>
+<p-small>
+Glacier Park Express– Service between Whitefish Mountain Resort, town of Whitefish, and Glacier Park
+Trips between Whitefish and Whitefish Mountain Resort are FREE.
+Trips to Glacier Park are $10 per person, $5 for kids
+Whitefish Mountain Resort Village Shuttle: Complimentary to Whitefish Mountain Resort Lodging guests, to various
+locations around the resort. This shuttle does not go down to Whitefish.
+</p-small>   
+<h5>Rental Car Companies</h5>
+<p-small>
+Dollar (406) 892-0009 Avis (406) 257-2727 Enterprise (406) 755-4848
+Hertz (406) 863-1210 Budget (406) 755-7500 Thrifty (406) 257-7333
+</p-small>   
+<h5>Taxi Service</h5>
+<p-small>
+Glacier Taxi – serving the Whitefish area: (406) 250-3603
+Arrow Shuttle - Offering Resort, Airport Shuttle, and Taxi Service. (406) 300-2301
+</p-small>   
+<h5>Road Conditions</h5>
+<p-small>
+State of Montana 1-800-226-7623 or Dial 511
+</p-small>    
 </div>  
 </div>  <!-- end of row -->
 </div>
