--- a/index.html
+++ b/index.html
@@ -196,8 +196,7 @@ Kintla Lodge offers 1-, 2- and 3-bedroom condos and hotel-style rooms with a que
 
 <div class="col-sm-4">
 <h3>Other Lodging Options</h3>
-<h5>Best Western Rocky Mountain Lodge</h5>
-<p-small>
+<p-small><h5>Best Western Rocky Mountain Lodge</h5>
 Address: 6510 Highway 93 S, Whitefish, MT 59937
 Phone: (406) 862-2569
 Straightforward property with free WiFi, breakfast & an area shuttle, plus an outdoor pool.</p-small>
